[tool.poetry]
name = "find_difference_task"
version = "0.1.0"
description = "Finding minimal absolute difference between two elements of two sorted arrays"
authors = ["Roland Szocki <rolandszocki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
